codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_slash_command_show_recalls_latest_plan.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: recalled
---
• Proposed Plan
 
 
  Approved plan
  
  - Preserve this exact step.
  - Then ship it.
