codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_slash_command_show_without_plan.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: message
---
• No proposed plan is available in this session yet.
